--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,8 @@ version: 1.0.0+1
 environment:
   sdk: ">=2.17.0-182.2.beta <3.0.0"
 
+
+
 # Dependencies specify other packages that your package needs in order to work.
 dependencies:
   flutter:
@@ -14,12 +16,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^1.0.0
+
 
 # The following section is specific to Flutter packages.
 flutter:
