--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,8 +5,6 @@ version: 1.0.0+1
 environment:
   sdk: ">=2.16.0-182.2.beta <3.0.0"
 
-
-
 # Dependencies specify other packages that your package needs in order to work.
 dependencies:
   flutter:
@@ -18,6 +16,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.13
   localstorage: ^4.0.0+1
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
