profile page updated

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  flutter_localizations:
+    sdk: flutter
+  flutter_translate: ^4.0.2
+  
   http: ^0.13.1
   email_validator: ^2.0.1
+
+  flutter_settings_screens: ^0.3.2-null-safety
   
   
   # The following adds the Cupertino Icons font to your application.
@@ -32,8 +39,10 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
+  generate: true
   uses-material-design: true
   assets:
-    - assets/images/like.png
+    - assets/images/
+    - assets/i18n/
 
  
