--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_sign_in: ^5.3.1
   shared_preferences: ^2.0.13
   localstorage: ^4.0.0+1
   flutter_dotenv: ^5.0.2
