--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,9 +16,12 @@ dependencies:
   
   http: ^0.13.1
   email_validator: ^2.0.1
+  
+  url_launcher: ^6.1.2
 
   flutter_settings_screens: ^0.3.2-null-safety
   
+  tutorial_coach_mark: ^1.2.3
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -26,6 +29,7 @@ dependencies:
   shared_preferences: ^2.0.13
   localstorage: ^4.0.0+1
   flutter_dotenv: ^5.0.2
+  
 
 dev_dependencies:
   flutter_test:
