--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,10 +26,25 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_sign_in: ^5.3.1
+  google_sign_in: ^5.3.2
   shared_preferences: ^2.0.13
   localstorage: ^4.0.0+1
   flutter_dotenv: ^5.0.2
+
+  flutter_map: any
+  geocoder: ^0.2.1
+  tuple: any
+  latlng: any
+  positioned_tap_detector_2: ^1.0.0
+  transparent_image: any
+  async: ^2.1.0
+  flutter_image: ^3.0.0
+  vector_math: ^2.0.0
+  proj4dart: any
+  meta: ^1.1.0
+  collection: ^1.14.0
+
+
   
 
 dev_dependencies:
