--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   shared_preferences: ^2.0.13
   localstorage: ^4.0.0+1
   flutter_dotenv: ^5.0.2
+  cloudinary_public: ^0.11.0
+  image_picker: ^0.8.5+3
+  path_provider: ^2.0.10
   
 
 dev_dependencies:
