live occupation functionality added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   path: ^1.7.0
   path_provider: any
   syncfusion_flutter_charts: ^20.1.59
+  simple_animations: ^4.0.2
+  equatable: ^2.0.3
 
 
   
