--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   path_provider: any
   syncfusion_flutter_charts: ^20.1.59
   simple_animations: ^4.0.2
+  syncfusion_flutter_calendar: ^20.1.61
+  intl: ^0.17.0
+  provider: ^6.0.3
 
 
   
