--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   syncfusion_flutter_calendar: ^20.1.61
   intl: ^0.17.0
   provider: ^6.0.3
+  syncfusion_flutter_datepicker: ^20.1.61
+  flutter_time_picker_spinner: ^2.0.0
 
 
   
