--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,9 +72,7 @@ dependencies:
   provider: ^6.0.3
   syncfusion_flutter_datepicker: ^20.1.61
   flutter_time_picker_spinner: ^2.0.0
-
-
-  
+  theme_provider: ^0.5.0
 
 dev_dependencies:
   flutter_test:
