--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,10 @@ dependencies:
   collection: ^1.14.0
   geolocator: ^8.2.0
 
-  flutter_pdfview: ^1.0.4
+  flutter_pdfview: ^1.2.2
+  flutter_downloader: any
+  downloads_path_provider_28: any
+  dio: ^4.0.4
 
   file_picker: any
   path: ^1.7.0
